--- a/index.html
+++ b/index.html
@@ -287,15 +287,15 @@ footer{background:var(--dk);padding:64px 60px 40px;color:var(--st);}
   
   <div class="hero-right" id="hero-right">
     <div class="hs active">
-      <img src="data:images/foggy-road.jpg">
+      <img src="images/foggy-road.jpg">
       <div class="hs-overlay"></div>
     </div>
     <div class="hs">
-      <img src="data:images/winter-forest.jpg">
+      <img src="images/winter-forest.jpg">
       <div class="hs-overlay"></div>
     </div>
     <div class="hs">
-      <img src="data:images/moraine-lake.jpg">
+      <img src="images/moraine-lake.jpg">
       <div class="hs-overlay"></div>
     </div>
     
@@ -329,105 +329,105 @@ footer{background:var(--dk);padding:64px 60px 40px;color:var(--st);}
   <div class="tp active" id="tab-all">
     <div class="gg2">
       <div class="gi" onclick="lb('owl-great-horned.jpg')">
-        <img src="data:images/owl-great-horned.jpg">
+        <img src="images/owl-great-horned.jpg">
         <div class="go">
           <p class="gt">Great Horned Owl</p>
           <p class="gg">Birds · Portrait</p>
         </div>
       </div>
       <div class="gi" onclick="lb('moraine-lake.jpg')">
-        <img src="data:images/moraine-lake.jpg">
+        <img src="images/moraine-lake.jpg">
         <div class="go">
           <p class="gt">Moraine Lake at Dawn</p>
           <p class="gg">Landscape · Reflection</p>
         </div>
       </div>
       <div class="gi" onclick="lb('bighorn.jpg')">
-        <img src="data:images/bighorn.jpg">
+        <img src="images/bighorn.jpg">
         <div class="go">
           <p class="gt">Bighorn Sheep</p>
           <p class="gg">Wildlife · Mountain</p>
         </div>
       </div>
       <div class="gi" onclick="lb('dandelion.jpg')">
-        <img src="data:images/dandelion.jpg">
+        <img src="images/dandelion.jpg">
         <div class="go">
           <p class="gt">Dandelion at Dusk</p>
           <p class="gg">Flora · Macro</p>
         </div>
       </div>
       <div class="gi" onclick="lb('hawk.jpg')">
-        <img src="data:images/hawk.jpg">
+        <img src="images/hawk.jpg">
         <div class="go">
           <p class="gt">Red-Tailed Hawk</p>
           <p class="gg">Birds · Raptor</p>
         </div>
       </div>
       <div class="gi" onclick="lb('mountain-sunset.jpg')">
-        <img src="data:images/mountain-sunset.jpg">
+        <img src="images/mountain-sunset.jpg">
         <div class="go">
           <p class="gt">Mountain Reflection</p>
           <p class="gg">Landscape · Sunset</p>
         </div>
       </div>
       <div class="gi" onclick="lb('owl-barred.jpg')">
-        <img src="data:images/owl-barred.jpg">
+        <img src="images/owl-barred.jpg">
         <div class="go">
           <p class="gt">Barred Owl</p>
           <p class="gg">Birds · Forest</p>
         </div>
       </div>
       <div class="gi" onclick="lb('rabbit.jpg')">
-        <img src="data:images/rabbit.jpg">
+        <img src="images/rabbit.jpg">
         <div class="go">
           <p class="gt">Eastern Cottontail</p>
           <p class="gg">Wildlife · Meadow</p>
         </div>
       </div>
       <div class="gi" onclick="lb('mountain-clouds.jpg')">
-        <img src="data:images/mountain-clouds.jpg">
+        <img src="images/mountain-clouds.jpg">
         <div class="go">
           <p class="gt">Castle Mountain</p>
           <p class="gg">Landscape · Drama</p>
         </div>
       </div>
       <div class="gi" onclick="lb('owl-screech.jpg')">
-        <img src="data:images/owl-screech.jpg">
+        <img src="images/owl-screech.jpg">
         <div class="go">
           <p class="gt">Eastern Screech Owl</p>
           <p class="gg">Birds · Portrait</p>
         </div>
       </div>
       <div class="gi" onclick="lb('squirrel.jpg')">
-        <img src="data:images/squirrel.jpg">
+        <img src="images/squirrel.jpg">
         <div class="go">
           <p class="gt">Ground Squirrel</p>
           <p class="gg">Wildlife · Prairie</p>
         </div>
       </div>
       <div class="gi" onclick="lb('tree-winter.jpg')">
-        <img src="data:images/tree-winter.jpg">
+        <img src="images/tree-winter.jpg">
         <div class="go">
           <p class="gt">Solitary Tree</p>
           <p class="gg">Landscape · Winter</p>
         </div>
       </div>
       <div class="gi" onclick="lb('owl-snowy.jpg')">
-        <img src="data:images/owl-snowy.jpg">
+        <img src="images/owl-snowy.jpg">
         <div class="go">
           <p class="gt">Snowy Owl</p>
           <p class="gg">Birds · Arctic</p>
         </div>
       </div>
       <div class="gi" onclick="lb('yellowthroat.jpg')">
-        <img src="data:images/yellowthroat.jpg">
+        <img src="images/yellowthroat.jpg">
         <div class="go">
           <p class="gt">Common Yellowthroat</p>
           <p class="gg">Birds · Warbler</p>
         </div>
       </div>
       <div class="gi" onclick="lb('foggy-road.jpg')">
-        <img src="data:images/foggy-road.jpg">
+        <img src="images/foggy-road.jpg">
         <div class="go">
           <p class="gt">Forest Road</p>
           <p class="gg">Landscape · Mood</p>
@@ -440,42 +440,42 @@ footer{background:var(--dk);padding:64px 60px 40px;color:var(--st);}
   <div class="tp" id="tab-birds">
     <div class="gg2">
       <div class="gi" onclick="lb('owl-great-horned.jpg')">
-        <img src="data:images/owl-great-horned.jpg">
+        <img src="images/owl-great-horned.jpg">
         <div class="go">
           <p class="gt">Great Horned Owl</p>
           <p class="gg">Birds · Portrait</p>
         </div>
       </div>
       <div class="gi" onclick="lb('hawk.jpg')">
-        <img src="data:images/hawk.jpg">
+        <img src="images/hawk.jpg">
         <div class="go">
           <p class="gt">Red-Tailed Hawk</p>
           <p class="gg">Birds · Raptor</p>
         </div>
       </div>
       <div class="gi" onclick="lb('owl-barred.jpg')">
-        <img src="data:images/owl-barred.jpg">
+        <img src="images/owl-barred.jpg">
         <div class="go">
           <p class="gt">Barred Owl</p>
           <p class="gg">Birds · Forest</p>
         </div>
       </div>
       <div class="gi" onclick="lb('owl-screech.jpg')">
-        <img src="data:images/owl-screech.jpg">
+        <img src="images/owl-screech.jpg">
         <div class="go">
           <p class="gt">Eastern Screech Owl</p>
           <p class="gg">Birds · Portrait</p>
         </div>
       </div>
       <div class="gi" onclick="lb('owl-snowy.jpg')">
-        <img src="data:images/owl-snowy.jpg">
+        <img src="images/owl-snowy.jpg">
         <div class="go">
           <p class="gt">Snowy Owl</p>
           <p class="gg">Birds · Arctic</p>
         </div>
       </div>
       <div class="gi" onclick="lb('yellowthroat.jpg')">
-        <img src="data:images/yellowthroat.jpg">
+        <img src="images/yellowthroat.jpg">
         <div class="go">
           <p class="gt">Common Yellowthroat</p>
           <p class="gg">Birds · Warbler</p>
@@ -488,49 +488,49 @@ footer{background:var(--dk);padding:64px 60px 40px;color:var(--st);}
   <div class="tp" id="tab-landscape">
     <div class="gg2">
       <div class="gi" onclick="lb('moraine-lake.jpg')">
-        <img src="data:images/moraine-lake.jpg">
+        <img src="images/moraine-lake.jpg">
         <div class="go">
           <p class="gt">Moraine Lake at Dawn</p>
           <p class="gg">Landscape · Reflection</p>
         </div>
       </div>
       <div class="gi" onclick="lb('mountain-sunset.jpg')">
-        <img src="data:images/mountain-sunset.jpg">
+        <img src="images/mountain-sunset.jpg">
         <div class="go">
           <p class="gt">Mountain Reflection</p>
           <p class="gg">Landscape · Sunset</p>
         </div>
       </div>
       <div class="gi" onclick="lb('mountain-clouds.jpg')">
-        <img src="data:images/mountain-clouds.jpg">
+        <img src="images/mountain-clouds.jpg">
         <div class="go">
           <p class="gt">Castle Mountain</p>
           <p class="gg">Landscape · Drama</p>
         </div>
       </div>
       <div class="gi" onclick="lb('tree-winter.jpg')">
-        <img src="data:images/tree-winter.jpg">
+        <img src="images/tree-winter.jpg">
         <div class="go">
           <p class="gt">Solitary Tree</p>
           <p class="gg">Landscape · Winter</p>
         </div>
       </div>
       <div class="gi" onclick="lb('foggy-road.jpg')">
-        <img src="data:images/foggy-road.jpg">
+        <img src="images/foggy-road.jpg">
         <div class="go">
           <p class="gt">Forest Road</p>
           <p class="gg">Landscape · Mood</p>
         </div>
       </div>
       <div class="gi" onclick="lb('frozen-lake.jpg')">
-        <img src="data:images/frozen-lake.jpg">
+        <img src="images/frozen-lake.jpg">
         <div class="go">
           <p class="gt">Frozen Lake</p>
           <p class="gg">Landscape · Winter</p>
         </div>
       </div>
       <div class="gi" onclick="lb('winter-forest.jpg')">
-        <img src="data:images/winter-forest.jpg">
+        <img src="images/winter-forest.jpg">
         <div class="go">
           <p class="gt">Winter Forest</p>
           <p class="gg">Landscape · Snow</p>
@@ -543,21 +543,21 @@ footer{background:var(--dk);padding:64px 60px 40px;color:var(--st);}
   <div class="tp" id="tab-wildlife">
     <div class="gg2">
       <div class="gi" onclick="lb('bighorn.jpg')">
-        <img src="data:images/bighorn.jpg">
+        <img src="images/bighorn.jpg">
         <div class="go">
           <p class="gt">Bighorn Sheep</p>
           <p class="gg">Wildlife · Mountain</p>
         </div>
       </div>
       <div class="gi" onclick="lb('rabbit.jpg')">
-        <img src="data:images/rabbit.jpg">
+        <img src="images/rabbit.jpg">
         <div class="go">
           <p class="gt">Eastern Cottontail</p>
           <p class="gg">Wildlife · Meadow</p>
         </div>
       </div>
       <div class="gi" onclick="lb('squirrel.jpg')">
-        <img src="data:images/squirrel.jpg">
+        <img src="images/squirrel.jpg">
         <div class="go">
           <p class="gt">Ground Squirrel</p>
           <p class="gg">Wildlife · Prairie</p>
@@ -570,7 +570,7 @@ footer{background:var(--dk);padding:64px 60px 40px;color:var(--st);}
   <div class="tp" id="tab-flora">
     <div class="gg2">
       <div class="gi" onclick="lb('dandelion.jpg')">
-        <img src="data:images/dandelion.jpg">
+        <img src="images/dandelion.jpg">
         <div class="go">
           <p class="gt">Dandelion at Dusk</p>
           <p class="gg">Flora · Macro</p>
@@ -583,7 +583,7 @@ footer{background:var(--dk);padding:64px 60px 40px;color:var(--st);}
 <!-- ABOUT -->
 <section class="as" id="about">
   <div class="av" id="portrait-parallax">
-    <img class="ai" src="data:images/portrait.png">
+    <img class="ai" src="images/portrait.png">
     <div class="ac tl"></div>
     <div class="ac br"></div>
   </div>
@@ -661,24 +661,24 @@ footer{background:var(--dk);padding:64px 60px 40px;color:var(--st);}
 
 <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script>
 const M={
-'bighorn.jpg':'data:images/bighorn.jpg',
-'dandelion.jpg':'data:images/dandelion.jpg',
-'foggy-road.jpg':'data:images/foggy-road.jpg',
-'frozen-lake.jpg':'data:images/frozen-lake.jpg',
-'hawk.jpg':'data:images/hawk.jpg',
-'moraine-lake.jpg':'data:images/moraine-lake.jpg',
-'mountain-clouds.jpg':'data:images/mountain-clouds.jpg',
-'mountain-sunset.jpg':'data:images/mountain-sunset.jpg',
-'owl-barred.jpg':'data:images/owl-barred.jpg',
-'owl-great-horned.jpg':'data:images/owl-great-horned.jpg',
-'owl-screech.jpg':'data:images/owl-screech.jpg',
-'owl-snowy.jpg':'data:images/owl-snowy.jpg',
-'portrait.png':'data:images/portrait.png',
-'rabbit.jpg':'data:images/rabbit.jpg',
-'squirrel.jpg':'data:images/squirrel.jpg',
-'tree-winter.jpg':'data:images/tree-winter.jpg',
-'winter-forest.jpg':'data:images/winter-forest.jpg',
-'yellowthroat.jpg':'data:images/yellowthroat.jpg'
+'bighorn.jpg':'images/bighorn.jpg',
+'dandelion.jpg':'images/dandelion.jpg',
+'foggy-road.jpg':'images/foggy-road.jpg',
+'frozen-lake.jpg':'images/frozen-lake.jpg',
+'hawk.jpg':'images/hawk.jpg',
+'moraine-lake.jpg':'images/moraine-lake.jpg',
+'mountain-clouds.jpg':'images/mountain-clouds.jpg',
+'mountain-sunset.jpg':'images/mountain-sunset.jpg',
+'owl-barred.jpg':'images/owl-barred.jpg',
+'owl-great-horned.jpg':'images/owl-great-horned.jpg',
+'owl-screech.jpg':'images/owl-screech.jpg',
+'owl-snowy.jpg':'images/owl-snowy.jpg',
+'portrait.png':'images/portrait.png',
+'rabbit.jpg':'images/rabbit.jpg',
+'squirrel.jpg':'images/squirrel.jpg',
+'tree-winter.jpg':'images/tree-winter.jpg',
+'winter-forest.jpg':'images/winter-forest.jpg',
+'yellowthroat.jpg':'images/yellowthroat.jpg'
 };
 
 // Image stories/descriptions database
